Add remove form to variable

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 });
 
                 // Скрываем форму удаления сотрудника
-                document.getElementById('removeEmployeeForm').style.display = 'none';
+                removeEmployeeForm.style.display = 'none';
             }
         }
     </script>
