Add time calculating for statistic

--- a/index.html
+++ b/index.html
@@ -65,7 +65,22 @@
                 <!-- Здесь будут отображаться записи -->
             </tbody>
         </table>
-        
+
+        <!-- Раздел для статистики сотрудников -->
+        <div id="employeeStatistics" style="display: block;">
+            <h2>Статистика по сотрудникам</h2>
+            <table id="statisticsTable">
+                <thead>
+                    <tr>
+                        <th>Сотрудник</th>
+                        <th>Отработанное время за месяц</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Здесь будут отображаться данные статистики -->
+                </tbody>
+            </table>
+        </div>
     </div>
     <script src="src/main.js" type="module"></script>
 </body>
