Fix error with months and month statistic

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <div id="statisticsModal" class="modal">
             <div class="modal-content">
                 <span class="close-btn">&times;</span>
-                <h3>Статистика сотрудников</h3>
+                <h3>Статистика сотрудников за данный месяц</h3>
                 <div id="statisticsList">
                     <table id="statisticsTable">
                         <thead>
                             <tr>
-                                <th>Сотрудник</th>
-                                <th>Отработанное время за месяц</th>
+                                <th>ФИО</th>
+                                <th>Отработанное время</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -76,7 +76,7 @@
         <table id="timeLog">
             <thead>
                 <tr>
-                    <th>Сотрудник</th>
+                    <th>ФИО</th>
                     <th>Дата</th>
                     <th>Время прихода</th>
                     <th>Время ухода</th>
